# wsbotsladko

./: Cargo.toml  README.md  filetypes.xml  jdk.table.xml  other.xml  rating_conf.json  vcs.xml
_windows/: applicationLibraries.xml  path.macros.xml
src/: addon.rs  conf.rs  denum.rs  dis.rs  disapi.rs  dishandler.rs  dstruct.rs  embed.ws  event.rs  help.ws  info.ws  main.rs  multirolefix.rs  net.rs  roles.rs  tests.rs  tournaments.rs  tourney.rs
