[package]
name = "WSBot"
version = "0.4.0"
authors = ["Sladko"]

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
regex = "0.2"
reqwest = "*"
lazy_static = "1.0"
mysql = "11.1.2"
serde = "1.0.8"
serde_json = "1.0.2"
serde_derive = "1.0.8"
time = "0.1.38"
rand = "0.3"

hyper = "0.11"
tokio-core = "0.1"
hyper-tls = "0.1"
native-tls = "0.1"
futures = "0.1"

indexmap = "0.4.*"