[package]
name = "WSBot"
version = "0.5.1"
authors = ["Sladko"]

[dependencies]
regex = "0.2"
reqwest = "0.8.5"
lazy_static = "1.0"
mysql = "11.1.2"
serde = "1.0.8"
serde_json = "1.0.2"
serde_derive = "1.0.8"
time = "0.1.38"
rand = "0.3"

indexmap = "0.4.*"

native-tls = "0.1"
websocket = "0.20.2"

net2 = "0.2"